# oaaclient-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
oaaclient/: __init__.py  client.py  structures.py  templates.py  utils.py
tests/: README.md  conftest.py  generate_app.py  generate_app_id_mapping.py  generate_hris.py  generate_idp.py  report_test.json  test_client.py  test_commands.py  test_custom_application.py  test_custom_idp.py  test_hris.py  test_payload_push.py  test_reprs.py  test_structures.py  test_tags.py  test_utils.py
tests/tools/: delete_test_insights.py
